text-wrap fix

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -65,4 +65,7 @@
     .account-link{
         display: none;
     }
+    .header .link{
+        text-wrap: nowrap;
+    }
 }
